A better MAVEN_OPTS default